--- a/Auth/package.json
+++ b/Auth/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-sessions": "^1.0.6",
+    "express-session": "^1.17.3",
+    "express-sessions": "^1.0.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12"
   }
