--- a/API/package.json
+++ b/API/package.json
@@ -1,21 +1,29 @@
 {
   "name": "dwii_ecommerce",
   "version": "1.0.0",
-  "description": "COMO RODAR O PROJETO BAIXADO\r Instalar todas as dependencias indicadas pelo package.json\r ### npm install",
+  "description": "Plataforma de Venda Online",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "basic-auth": "^2.0.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
+    "express-sessions": "^1.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.1",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12",
     "sequelize": "^6.31.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
