--- a/API/docs/categoria.yml
+++ b/API/docs/categoria.yml
@@ -1,5 +1,5 @@
 paths:
-  /categorias:
+  /categoria:
     get:
       summary: Obter todas as categorias
       responses:
@@ -17,7 +17,7 @@ paths:
       responses:
         '201':
           description: Criado
-  /categorias/{id}:
+  /categoria/{id}:
     put:
       summary: Atualizar uma categoria pelo ID
       parameters:
