--- a/API/docs/produto.yml
+++ b/API/docs/produto.yml
@@ -1,5 +1,5 @@
 paths:
-  /produtos:
+  /produto:
     get:
       summary: Obter todos os produtos
       responses:
@@ -17,7 +17,7 @@ paths:
       responses:
         '201':
           description: Criado
-  /produtos/{id}:
+  /produto/{id}:
     put:
       summary: Atualizar um produto pelo ID
       parameters:
