--- a/API/docs/user.yml
+++ b/API/docs/user.yml
@@ -1,5 +1,5 @@
 paths:
-  /usuarios:
+  /usuario:
     get:
       summary: Obter todos os usuários
       responses:
@@ -17,7 +17,7 @@ paths:
       responses:
         '201':
           description: Usuario criado com sucesso
-  /usuarios/{id}:
+  /usuario/{id}:
     get:
       summary: Obter um usuário pelo ID
       parameters:
