--- a/API/.env
+++ b/API/.env
@@ -1,13 +1,12 @@
-
-NODE_ENV=development
+NODE_ENV = development
 DB_HOST=localhost
-DB_DATABASE=loja_online
+DB_BASE=loja_online
 DB_USER=root
 DB_PASSWORD=""
-DB_DIALECT=mysql
+DB_DIALECT=mysql  
 
 GITHUB_CLIENT_ID = "ffd85ef5588343891217"
-# Ali p nhs poi cena de github 
+
 GITHUB_CLIENT_SECRET = "c39a476050a463a041150a2d1f003b39d073afbc" 
 
 GITHUB_CALLBACK_URL = "http://localhost:3000/auth/github/callback"
