--- a/API/package.json
+++ b/API/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dwii_ecommerce",
+  "name": "ecommerce",
   "version": "1.0.0",
-  "description": "Plataforma de Venda Online",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
@@ -10,25 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.20.2",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
-    "express-sessions": "^1.0.1",
-    "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.3.1",
+    "mysql2": "^3.4.2",
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
-    "passport-github2": "^0.1.12",
-    "sequelize": "^6.31.1",
+    "sequelize": "^6.32.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.0"
+    "nodemon": "^2.0.22",
+    "sequelize-cli": "^6.6.1"
   }
 }
